2012-01-31  Per Bothner  <per@bothner.com>

	* ProceduralProxy.java: New class.
	* Makefile.am: Update accordingly.

2012-01-29  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): We should optimize
	even if Compiler#mustCompile is false.

2012-01-27  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): If type is LangObjType,
	call getConstructorType.

2012-01-15  Per Bothner  <per@bothner.com>

	* LazyType.java (getLazyType): New static method.

2011-12-29  Per Bothner  <per@bothner.com>

	* LazyType.java: New class, extends ObjectType.
	* Makefile.am: Update accordingly.
	* OccurrenceType.java (compare): Check for LazyType.

2011-12-12  Per Bothner  <per@bothner.com>

	* CompileInvoke.java: isInterface call no longer needs cast.
	* ClassMethods.java: Likewise.

2011-12-09  Per Bothner  <per@bothner.com>

	* CompileReflect.java (validateApplySlotGet):  Set expression type.
	Don't immediately return if object is array, unless the field
	is "length".  This allows "class" property (i.e. getClass) to work.
	* SlotGet.java (getReturnType): Remove method - no longer needed.

2011-08-29  Charles Turner <chturne@gmail.com>

	* FieldLocation.java (setKindFlags): Throw a RuntimeException if
	the declared field is null.

2011-08-28  Per Bothner  <per@bothner.com>

	* CompileReflect.java (inlineClassName): Don't inline if
	checkKnownClass returns -1.
	This fixes Savannah bug#34003 "Unknown class confuses inliner".

2011-08-17  Per Bothner  <per@bothner.com>

	* CompileBuildObject.java (make): Use Compilation#lookup as it is
	more general/robust than ScopeExp#lookup.

2011-07-13  Per Bothner  <per@bothner.com>

	Refactoring for "object building" to make support custom bulders.
	* CompileBuildObject.java: New class.
	* Makefile.am: Update accordingly.
	* CompileInvoke.java: Some object construction logic moved to
	CompileBuildObject.

	* Invoke.java (applyN): Remove two ClassType casts, so the code will