@@ -1,3 +1,7 @@
+2012-02-09  Per Bothner  <per@bothner.com>
+
+	* bridge.scm: Tweak to check for recent "isXxx" method fix.
+
 2012-02-09  Jamison Hope  <jrh@theptrgroup.com>
 
 	* bridge.scm: New tests for bridge methods.
